# Zadanie2_PEA

./: CMakeLists.txt  ConfigFileHandler.cpp  ConfigFileHandler.h  DataGenerator.cpp  DataGenerator.h  DataReader.cpp  DataReader.h  main.cpp  plik_config.cfg  probny.txt  test.txt
Algorithms/: BAndBBFS.cpp  BAndBBFS.h  BAndBDFS.cpp  BAndBDFS.h  BAndBLowestCost.cpp  BAndBLowestCost.h  BoundCalculator.cpp  BoundCalculator.h
Structurs/: Node.h  PriorityQueue.h  Queue.h  Result.h  Stack.h
